@@ -116,6 +116,7 @@ Please note that our support for the checkout block is still experimental and th
 * Add - Support business account branding settings.
 * Update - Capture order-related metadata not captured by mobile app for in-person payment transactions.
 * Add - REST endpoint to print IPP receipts.
+* Fix - Error when renewing subscriptions with saved payment methods disabled.
 
 = 3.3.0 - 2021-11-18 =
 * Add - Add Idempotency Key to POST headers.
